--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "animate.css": "~3.3.0",
     "angular": "~1.4.0",
     "bootstrap": "~3.3.5",
-    "ng-grid": "~2.0.14"
+    "ng-grid": "~2.0.14",
+    "ngDialog": "~0.4.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
