--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,6 @@
     "angular-animate": "~1.4.0",
     "angular-cookies": "~1.4.0",
     "angular-touch": "~1.4.0",
-    "angular-sanitize": "~1.4.0",
     "jquery": "~2.1.4",
     "angular-resource": "~1.4.0",
     "angular-ui-router": "~0.2.15",
@@ -18,7 +17,11 @@
     "angular": "~1.4.0",
     "bootstrap": "~3.3.5",
     "ng-grid": "~2.0.14",
-    "ngDialog": "~0.4.0"
+    "ngDialog": "~0.4.0",
+    "textAngular": "~1.4.3",
+    "fontawesome": "~4.4.0",
+    "rangy": "~1.3.0",
+    "summernote": "~0.6.16"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
