--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,9 @@
     "textAngular": "~1.4.3",
     "fontawesome": "~4.4.0",
     "rangy": "~1.3.0",
-    "summernote": "~0.6.16"
+    "summernote": "~0.6.16",
+    "ng-file-upload": "~7.0.9",
+    "angular-file-upload": "~2.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
