--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,9 @@
     "rangy": "~1.3.0",
     "summernote": "~0.6.16",
     "ng-file-upload": "~7.0.9",
-    "angular-file-upload": "~2.1.1"
+    "angular-file-upload": "~2.1.1",
+    "angular-masonry": "~0.11.1",
+    "angular-deckgrid": "~0.5.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
